<resources>
    <string name="app_name">PokeApp</string>
    <string name="search">Search</string>
    <string name="favourite">Favourite</string>
    <string name="try_again">Try again</string>
    <string name="id">#%1$s</string>
    <string name="hp">HP</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="sp_atk">Sp. Atk</string>
    <string name="sp_def">Sp. Def</string>
    <string name="speed">Speed</string>
    <string name="you_don_t_have_favourite_pokemon_yet">You don\'t have favourite pokemon yet…</string>
    <string name="no_search_results">No search results</string>
</resources>