<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <ImageView
        android:id="@+id/imageViewBack"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewIsFavourite"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_unfavourite"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imageViewIsFavourite"
        app:layout_constraintEnd_toStartOf="@id/imageViewIsFavourite"
        app:layout_constraintStart_toEndOf="@id/imageViewBack"
        app:layout_constraintTop_toTopOf="@id/imageViewBack" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTypeList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:clipToPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewId" />

    <ImageView
        android:id="@+id/imageViewSprite"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewTypeList" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewSprite" />

    <LinearLayout
        android:id="@+id/linearLayoutStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewName">

        <TextView
            android:id="@+id/textViewHp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hp"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textViewAttack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/attack"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textViewDefense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/defense"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textViewSpAtk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sp_atk"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textViewSpDef"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sp_def"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textViewSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/speed"
            android:textSize="16sp"
            android:textStyle="italic" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewHpValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/linearLayoutStats"
        app:layout_constraintTop_toTopOf="@id/linearLayoutStats" />

    <TextView
        android:id="@+id/textViewAttackValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/textViewHpValue"
        app:layout_constraintStart_toStartOf="@id/textViewHpValue"
        app:layout_constraintTop_toBottomOf="@id/textViewHpValue" />

    <TextView
        android:id="@+id/textViewDefenseValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/textViewHpValue"
        app:layout_constraintStart_toStartOf="@id/textViewHpValue"
        app:layout_constraintTop_toBottomOf="@id/textViewAttackValue" />

    <TextView
        android:id="@+id/textViewSpAtkValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/textViewHpValue"
        app:layout_constraintStart_toStartOf="@id/textViewHpValue"
        app:layout_constraintTop_toBottomOf="@id/textViewDefenseValue" />

    <TextView
        android:id="@+id/textViewSpDefValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/textViewHpValue"
        app:layout_constraintStart_toStartOf="@id/textViewHpValue"
        app:layout_constraintTop_toBottomOf="@id/textViewSpAtkValue" />

    <TextView
        android:id="@+id/textViewSpeedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/textViewHpValue"
        app:layout_constraintStart_toStartOf="@id/textViewHpValue"
        app:layout_constraintTop_toBottomOf="@id/textViewSpDefValue" />

    <ImageView
        android:id="@+id/imageViewErrorIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="250dp"
        android:src="@drawable/ic_error"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewErrorIcon" />

    <Button
        android:id="@+id/buttonTryAgain"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/try_again"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewErrorMessage" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>